--- a/lang/ja.json
+++ b/lang/ja.json
@@ -206,6 +206,14 @@
             "tokenElevScaleMultiSett": {
                 "hint": "標高スケールにこの数値を掛けます。 \n1 より大きい数値はトークンを大きくし、1 より小さい数値はトークンを小さくします。",
                 "name": "標高スケール乗数"
+            },
+            "migrateOnStartup": {
+                "hint": "有効にすると、モジュールはV11データ構造から起動時にV12のデータにデータを移行します。 \nMacro 'config.levels.helpers.migration.showmanualmigrationdialog（）'を使用して、設定を手動で移行できます。",
+                "name": "起動時に設定を移行します"
+            },
+            "strictVisionCheck": {
+                "hint": "障害のある闇の光源が視力をブロックしない場合。\n有効にすると、ビジョンポリゴンの外側のトークンが3D視力計算に表示されます。",
+                "name": "厳格なビジョンチェック"
             }
         },
         "template": {
@@ -273,10 +281,10 @@
             "getFromScene": "シーンからレベルを取得",
             "minElevDiff": "最小レベルサイズ",
             "players": "プレーヤーを表示",
-            "stair": "図面を階段として配置する",
             "title": "レベル - レイヤーツール",
             "tokenAttacher": "現在のレベルを基準にしてトークン アタッチャー プレハブを配置します<hr>プレハブを配置しない場合は、このオプションを無効にする必要があります",
-            "warning": "警告！\nシーン設定で「ライトを無効にしない」が有効になっています - 複数のレベルは正しく機能しません。\nクリックしてこの問題を解決してください。"
+            "warning": "警告！\nシーン設定で「ライトを無効にしない」が有効になっています - 複数のレベルは正しく機能しません。\nクリックしてこの問題を解決してください。",
+            "stair": "階段として地域を配置します"
         },
         "widget": {
             "element": "レベル",
