--- a/lang/ja.json
+++ b/lang/ja.json
@@ -214,6 +214,10 @@
             "strictVisionCheck": {
                 "hint": "障害のある闇の光源が視力をブロックしない場合。\n有効にすると、ビジョンポリゴンの外側のトークンが3D視力計算に表示されます。",
                 "name": "厳格なビジョンチェック"
+            },
+            "multilevelFogFolder": {
+                "hint": "フォルダー名は、マルチレベルの霧の戦争のために生成されたシーンを保存します。",
+                "name": "マルチレベルフォグフォルダー"
             }
         },
         "template": {
@@ -284,7 +288,8 @@
             "title": "レベル - レイヤーツール",
             "tokenAttacher": "現在のレベルを基準にしてトークン アタッチャー プレハブを配置します<hr>プレハブを配置しない場合は、このオプションを無効にする必要があります",
             "warning": "警告！\nシーン設定で「ライトを無効にしない」が有効になっています - 複数のレベルは正しく機能しません。\nクリックしてこの問題を解決してください。",
-            "stair": "階段として地域を配置します"
+            "stair": "階段として地域を配置します",
+            "fog": "セットアップマルチレベルフォグ（ベータ）"
         },
         "widget": {
             "element": "レベル",
@@ -293,6 +298,12 @@
         "yesnodialog": {
             "no": "キャンセル",
             "yes": "確認する"
+        },
+        "multiLevelFog": {
+            "advancedFogWarn": "レベル：マルチレベルの霧が機能するためには、戦争設定の高度な霧を無効にする必要があります。モジュール設定で無効にするか、タイルごとに無効にしてください。",
+            "alreadyExists": "シーンはすでに存在します。シーンを表示して、霧をリセットして、特定のレベルの霧をリセットするか、シーンを削除してマルチレベルの霧を再現してください。\nシーン：",
+            "createdScenes": "％nシーンを作成しました。 \n<a href = 'https：//wiki.theripper93.com/levels",
+            "noLevels": "このシーンには複数のレベルがありません。"
         }
     }
 }
