--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -72,6 +72,10 @@
             "strictVisionCheck": {
                 "hint": "Se as fontes de luz de escuridão desativadas não bloquearem a visão. \nSe ativado, os tokens fora do polígono da visão, mas visíveis para os cálculos de visão 3D, serão visíveis.",
                 "name": "Verificação de visão estrita"
+            },
+            "multilevelFogFolder": {
+                "hint": "O nome da pasta para armazenar as cenas geradas para o nevoeiro multinível de guerra.",
+                "name": "Pasta de neblina multinível"
             }
         },
         "tileconfig": {
@@ -254,7 +258,8 @@
             "minElevDiff": "Tamanho Mínimo do Nível",
             "tokenAttacher": "Colocar prefabs do Anexador de Token em relação ao nível atual<hr>Se você NÃO estiver colocando Prefabs, esta opção precisa ser DESATIVADA",
             "warning": "AVISO! 'Não desativar luzes' está habilitado nas Configurações da Cena - Múltiplos níveis não funcionarão corretamente. Clique para resolver este problema.",
-            "stair": "Coloque regiões como escadas"
+            "stair": "Coloque regiões como escadas",
+            "fog": "Configurar o nevoeiro multinível (beta)"
         },
         "yesnodialog": {
             "yes": "Confirmar",
@@ -293,6 +298,12 @@
             "midiqol": {
                 "tokenvis": "Habilitar a opção 'Os jogadores controlam tokens ocultos possuídos' no MidiQOL causará problemas de visibilidade do token. Por favor, desative esta opção nas configurações do módulo."
             }
+        },
+        "multiLevelFog": {
+            "advancedFogWarn": "Níveis: a névoa avançada da configuração de guerra precisa ser desativada para que o nevoeiro de vários níveis funcione, desative -o nas configurações do módulo ou desative -o por ladrilho.",
+            "alreadyExists": "A cena já existe, veja a cena e redefina o nevoeiro para redefinir a névoa do nível específica ou excluir a cena e reinacionar o nevoeiro de vários níveis. \nCena:",
+            "createdScenes": "Cenas de %n. \n<a href = 'https: //wiki.theripper93.com/levels",
+            "noLevels": "Esta cena não tem vários níveis."
         }
     }
 }
